--- a/colour-theme - dark.properties
+++ b/colour-theme - dark.properties
@@ -29,7 +29,7 @@
 # Midlight
 # Mid
 # Dark
-ScrollBar = "DarkOrange"
+ScrollBar = "White"
 # ScrollBarBackground
 # ScrollBarBorder
 # SliderBackground
@@ -51,7 +51,7 @@ Background = "#242424"
 # HighlightedForeground
 HighlightedBackground = "#2d2d2d"
 # WindowForeground
-WindowBackground = "#242424"
+WindowBackground = "DimGray"
 WindowInternalBorder = "DarkOrange"
 WindowBorder = "DarkOrange"
 # ErrorBackground
@@ -110,7 +110,7 @@ SelectionBackground = "DodgerBlue"
 CaretLineBackground = "#2d2d2d"
 # IndentationGuidesForeground
 # FoldMarginForeground
-PaneBackground = "DimGrey"
+PaneBackground = "Grey"
 # Link
 # LinkVisited
 # Scope
