Mofdified theme to work better on Mac.

--- a/colour-theme - dark.properties
+++ b/colour-theme - dark.properties
@@ -30,9 +30,9 @@
 # Mid
 # Dark
 ScrollBar = "White"
-# ScrollBarBackground
+ScrollBarBackground = "DimGray"
 # ScrollBarBorder
-# SliderBackground
+SliderBackground = "DodgerBlue"
 # SliderBorder
 # Slider
 # Tab
@@ -50,7 +50,7 @@ TabSelected = "DarkOrange"
 Background = "#242424"
 # HighlightedForeground
 HighlightedBackground = "#2d2d2d"
-# WindowForeground
+WindowForeground = "White"
 WindowBackground = "DimGray"
 WindowInternalBorder = "DarkOrange"
 WindowBorder = "DarkOrange"
@@ -99,7 +99,7 @@ DoubleQuotedStringBackground = "#242424"
 # PercentStringwForeground
 # PercentStringwBackground
 # MarginForeground
-# MarginBackground
+MarginBackground = "Black"
 MarkerBackground = "#2d2d2d"
 # SelectionForeground
 SelectionBackground = "DodgerBlue"
